# albedo_aerial_photogrammetry

./: .gitignore  CMakeLists.txt  README.md  conda_deps.sh  setup.py
apps/: CMakeLists.txt
apps/ambientocc_baker/: AmbientOccBaker.cpp  AmbientOccBaker.h  CMakeLists.txt  main.cpp
apps/inverse_intrinsic_camera/: CMakeLists.txt  main.cpp  static_assert.hpp  symdiff.py
apps/tinyrender/: CMakeLists.txt  TinyRender.cpp  TinyRender.h  main.cpp
dev/: CMakeLists.txt  test_environment_map.cpp
doc/: albedo_processing.md  build.md  dataset_preprocessing.md  synthetic_datasets.md
doc/GoodalePark/: delighter0001-0096.mkv  delighter0001-0096.webm  metashape0001-0096.mkv  metashape0001-0096.webm  ours0001-0096.mkv  ours0001-0096.webm
scripts/: onekey.sh  step0_blockxml_to_imagedataset.py  step0_tiledobj_to_modeldataset.py  step10_export_cam.py  step1_pull_images.py  step2.1_ambient_occ_baker.sh  step2.2_render_buffers.sh  step3_crf_sunvis_refinement.py  step4_sample_litshadow_band.py  step5_process_litshadow_band.py  step6_compute_sunsky_ratio.py  step7_decompose_albedo.py  step8_undistortion.py  step9_hdr2ldr.py
src_cpp/: CMakeLists.txt  CameraModel.cpp  CameraModel.h  EnvironmentMap.cpp  EnvironmentMap.h  utils.h
src_cpp/embcommon/: CMakeLists.txt
src_cpp/embcommon/core/: differential_geometry.h  differential_geometry.isph  ray.h
src_cpp/embcommon/simd/: vboolf8_avx.h
src_cpp/embcommon/tasking/: CMakeLists.txt
src_cpp/utils/: AOProps.cpp  AOProps.h  sphere_tessellation.cpp  sphere_tessellation.h  writer.cpp  writer.h
src_python/aerial_albedo/: calc_sun.py
src_python/aerial_albedo/cli/: viewdng.py
